# pico-projects

./: .gitignore
motorControl/: CMakeLists.txt  motorControl.c  motorPWM.pio.h
motorPWM/: CMakeLists.txt  motorPWM.c  motorPWM.pio
motorPWM_dirControl/: motorPWM.c  motorPWM.pio
motorRPM/: CMakeLists.txt  motorRPM.c  motorRPM.pio
motorSpeedControl/: CMakeLists.txt  motorSpeedControl.c
test1/: test.c
testPulse/: CMakeLists.txt  testPulse.c  testPulse.pio
